--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@
 
 .butn5:hover {
 	box-shadow:inset 0px 10px 0px 0px #FEABDB;
-	
+
 text-decoration: none;
   color: white;
 }
@@ -214,4 +214,12 @@ color: #fff !important;
 .nav-btn{
 	border: 1px solid gray;
 	margin: 0px -6px -15px 0px;
+}
+.footer-links{
+	text-decoration :none;
+	color: white;
+}
+.footer-links:hover{
+	text-decoration: none;
+	color: yellow;
 }
